--- a/lab1/index.html
+++ b/lab1/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="/img/dog.jpg" alt="This is happy dog" width="10%" height="10%">
+    <img src="/WAP/img/dog.jpg" alt="This is happy dog" width="10%" height="10%">
     <img src="../img/dog.jpg" alt="This is happy dog" width="10%" height="10%">
     <img src="../../../img/dog.jpg" alt="This is happy dog" width="10%" height="10%">
     <img src="./../img/dog.jpg" alt="This is happy dog" width="10%" height="10%">
